--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
     box-sizing: border-box;
 }
 
+img {
+    box-shadow: 0 4px 15px rgba(82, 11, 11, 0.5);
+}
 
 /* Remove bullet points and default list styling */
 
@@ -20,8 +23,9 @@
 }
 
 nav {
-    background-color: #2450c9;
+    background: linear-gradient(135deg, #7097be 0%, #216697 100%);
     padding: 1rem;
+    border-radius: 0.3rem;
 }
 
 .nav-menu {
@@ -32,18 +36,21 @@ nav {
 }
 
 .nav-menu a {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: monospace;
     font-size: 22px;
     margin: 0.8rem;
-    background-color: #4781ec;
-    padding: 10px 30px;
+    background: linear-gradient(135deg, #4a7eb2 0%, #216697 100%);
+    padding: 10px 20px;
     display: block;
     border-radius: 5px;
+    box-shadow: 0 4px 15px rgba(16, 66, 97, 0.5);
     transition: background-color 0.4s ease;
 }
 
+
 .nav-menu a:hover {
-    background-color: #2b60d3;
+    background: linear-gradient(135deg, #3270af 0%, #216697 100%);
+    transform: scale(1.1);
 }
 /* Logo */
 
@@ -51,159 +58,201 @@ nav {
     display: flex;
     justify-content: space-between; /* Logo Left, menu right */
     align-items: center;
-    background-color: #3c68d5;
+    /* background-color: #3c68d5; */
+    background: linear-gradient(135deg, #7097be 0%, #216697 100%);
 }
 .logo {
     padding-left: 1rem;
+    img {
+    box-shadow: 0 4px 15px rgba(82, 11, 11, 0);
+}
 }
 /* Main */
-main {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
 
 .head {
+    border-radius: 0.3rem;
     padding: 3rem;
     text-align: center;
-    background-color: #dc4d4d;
+    background: linear-gradient(135deg, #bb5353 0%, #972121 100%);
 }
 h1 {
     color: #ffeaea;
     font-size: 40px;
     padding-bottom: 1rem;
+    font-family: monospace;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
 }
 
 h2 {
     color: #ffffff;
     font-size: 35px;
     padding-bottom: 1rem;
+    font-family: monospace;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
 }
 
 p {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: light;
 }
+
 
 /* Home */
 
 .home {
     padding-bottom: 2rem;
-    background-color: #ffe6e6;
+    background: linear-gradient(135deg, #ffffff 0%, #e0b5b5 100%);
+    border-radius: 0.3rem;
+    box-shadow: 0 4px 15px rgb(18, 144, 222);
 }
 
+.home p {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+    font-size: 25px;
+    margin-left: 5rem;
+    margin-bottom: 5rem;
+}
+
+.home img {
+    float: left;
+    margin-right: 1rem;
+}
 .home h2 {
-    color: #950a0a;
-}
-
-.home-top {
+    color: #c53c3c;
     margin-left: 1rem;
     padding: 1rem;
     padding-bottom: 1.5rem;
 }
 
-.home p {
-    font-size: 20px;
-    margin-left: 5rem;
-}
 
 /* History */
 
 .history {
      padding-bottom: 2rem;
-     background-color: #dc4d4d;
+     background: linear-gradient(135deg, #bb5353 0%, #972121 100%);
+     border-radius: 0.3rem;
 }
 
 .history h2 {
     color: #ffeaea;
 }
 
-.history-top {
+.history h2 {
     margin-left: 1rem;
     padding: 1rem;
     padding-bottom: 1.5rem;
 }
 
+.history img {
+    float: left;
+    margin-right: 1rem;
+}
+
 .history p {
-    font-size: 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+    font-size: 25px;
     margin-left: 5rem;
+    color: #ffffff;
+    margin-left: 5rem;
+    margin-bottom: 5rem;
 }
 
 /* Voting */
 
 .voting {
     padding-bottom: 2rem;
-    background-color: #ffe6e6;
+    background: linear-gradient(135deg, #ffffff 0%, #e0b5b5 100%);
+    border-radius: 0.3rem;
 }
 
 .voting h2 {
-    color: #950a0a;
-}
-
-.voting-top {
+    color: #c53c3c;
     margin-left: 1rem;
     padding: 1rem;
     padding-bottom: 1.5rem;
 }
 
-.voting p {
-    font-size: 20px;
-    margin-left: 5rem;
+.voting img {
+    float: left;
+    margin-right: 1rem;
 }
 
-/* Voting */
+.voting p {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+    font-size: 25px;
+    margin-left: 5rem;
+    margin-left: 5rem;
+    margin-bottom: 8rem;
+}
+/* Facts */
 
 .facts {
      padding-bottom: 2rem;
-     background-color: #dc4d4d;
+     background: linear-gradient(135deg, #bb5353 0%, #972121 100%);
+     border-radius: 0.3rem;
 }
 
 .facts h2 {
     color: #ffeaea;
-}
-
-.facts-top {
     margin-left: 1rem;
     padding: 1rem;
     padding-bottom: 1.5rem;
 }
 
-.facts li {
-    font-size: 20px;
+.facts img {
     margin-left: 5rem;
+    margin-bottom: 1.5rem;
+}
+
+.facts li {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+    font-size: 25px;
+    margin-left: 5rem;
+    color: #ffffff;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 /* Matters */
 
 .matters {
     padding-bottom: 2rem;
-    background-color: #ffe6e6;
+    background: linear-gradient(135deg, #ffffff 0%, #e0b5b5 100%);
 }
 
 .matters h2 {
-    color: #950a0a;
-}
-
-.matters-top {
+    color: #c53c3c;
     margin-left: 1rem;
     padding: 1rem;
     padding-bottom: 1.5rem;
 }
 
+.matters img {
+    float: left;
+    margin-right: 1rem;
+}
+
 .matters p {
-    font-size: 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+    font-size: 25px;
     margin-left: 5rem;
+    margin-left: 5rem;
+    margin-bottom: 5rem;
 }
 
 /* Footer */
 
 footer {
     padding-top: 2rem;
-    background-color: #dc4d4d;
+    background: linear-gradient(135deg, #bb5353 0%, #972121 100%);
     padding-bottom: 1rem;
+    border-radius: 0.3rem;
 }
 
 footer p {
     margin: 2rem;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: monospace;
     font-size: 25px;
     color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
 
 }
